--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-image-magnify": "^2.7.4",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
